--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -43,7 +43,7 @@
                                 </dl>
                                 <div class="btn">
                                     <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>
-                                    <a class="fr" href="/logout/">退出</a>
+                                    <a class="fr" href="{% url 'logout' %}">退出</a>
                                 </div>
                             </div>
                         </div>
@@ -89,10 +89,10 @@
     <div class="wp list personal_list">
         <div class="left">
             <ul>
-                <li class="active2"><a href="{% url 'users:user_info' %}">个人资料</a></li>
-                <li ><a href="{% url 'users:mycourse' %}">我的课程</a></li>
-                <li ><a href="{% url 'users:myfav_org' %}">我的收藏</a></li>
-                <li >
+                <li {% if current_nav == 'info' %} class="active2" {% endif %}><a href="{% url 'users:user_info' %}">个人资料</a></li>
+                <li {% if current_nav == 'course' %} class="active2" {% endif %} ><a href="{% url 'users:mycourse' %}">我的课程</a></li>
+                <li {% if current_nav == 'org' %} class="active2" {% endif %} ><a href="{% url 'users:myfav_org' %}">我的收藏</a></li>
+                <li {% if current_nav == 'message' %} class="active2" {% endif %} >
                     <a href="{% url 'users:mymessage' %}" style="position: relative;">
                         我的消息
                     </a>
